--- a/Life/Life.csproj
+++ b/Life/Life.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Life.Core\Life.Core.csproj" />
+  </ItemGroup>
+
 </Project>
