Статические интерфейсы для методов First(Next)Generation

--- a/Life.Server.Infrastructure/Life.Server.Infrastructure.csproj
+++ b/Life.Server.Infrastructure/Life.Server.Infrastructure.csproj
@@ -1,17 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <UseWindowsForms>true</UseWindowsForms>
+    <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <EnablePreviewFeatures>True</EnablePreviewFeatures>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Life.Core\Life.Server.Core.csproj" />
-    <ProjectReference Include="..\Life.Server.Infrastructure\Life.Server.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
