Я запутался, но пока так

--- a/Life.Clients.WinForms/Life.Clients.WinForms.csproj
+++ b/Life.Clients.WinForms/Life.Clients.WinForms.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Life.Core\Life.Server.Core.csproj" />
+    <ProjectReference Include="..\Life.Server.Core\Life.Server.Core.csproj" />
     <ProjectReference Include="..\Life.Server.Infrastructure\Life.Server.Infrastructure.csproj" />
   </ItemGroup>
 
