--- a/Life.Server.Core/Life.Server.Core.csproj
+++ b/Life.Server.Core/Life.Server.Core.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Life.Shared\Life.Shared.csproj" />
+  </ItemGroup>
+
+
+	
 </Project>
