--- a/Life.Server.Infrastructure/Life.Server.Infrastructure.csproj
+++ b/Life.Server.Infrastructure/Life.Server.Infrastructure.csproj
@@ -8,7 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.43.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Life.Server.Core\Life.Server.Core.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<Protobuf Include="..\Life.Shared\Domain\Protos\gameProto.proto" GrpcServices="Server" />
+	</ItemGroup>
+	
 </Project>
