--- a/GrpcService/Properties/launchSettings.json
+++ b/GrpcService/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5231;https://localhost:7232;https://192.168.23.194:7231;http://192.168.23.194:7233",
+      "applicationUrl": "http://localhost:5231;https://localhost:7232;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
