--- a/GrpcService/LifeServer.csproj
+++ b/GrpcService/LifeServer.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
 	<EnablePreviewFeatures>true</EnablePreviewFeatures>
+	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
