--- a/Life.Server.Infrastructure/Life.Server.Infrastructure.csproj
+++ b/Life.Server.Infrastructure/Life.Server.Infrastructure.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <EnablePreviewFeatures>True</EnablePreviewFeatures>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
