--- a/GrpcService/LifeServer.csproj
+++ b/GrpcService/LifeServer.csproj
@@ -16,4 +16,6 @@
     <ProjectReference Include="..\Life.Server.Infrastructure\Life.Server.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
